# service/transaction.go
@@ -26,7 +26,7 @@ func NewTransactionService(conf *config.Config) *transactionService {
 const transactionServicePath = `transactionServise: %w`
 
 func (s *transactionService) Create(ctx context.Context, tr model.CreateTransactionRq) (rp model.CreateTransactionRp, err error) {
-	code, err := s.doReq(ctx, http.MethodPost, "/transaction", tr, rp)
+	code, err := s.doReq(ctx, http.MethodPost, "/transaction", &tr, &rp)
 	if err != nil {
 		return rp, fmt.Errorf(transactionServicePath, err)
 	}
@@ -39,7 +39,7 @@ func (s *transactionService) Create(ctx context.Context, tr model.CreateTransact
 }
 
 func (s *transactionService) Rollback(ctx context.Context, uuid model.RollbackTransactionRq) error {
-	code, err := s.doReq(ctx, http.MethodDelete, "/rollback", uuid, nil)
+	code, err := s.doReq(ctx, http.MethodDelete, "/transaction", &uuid, nil)
 	if err != nil {
 		return fmt.Errorf(transactionServicePath, err)
 	}
@@ -52,7 +52,7 @@ func (s *transactionService) Rollback(ctx context.Context, uuid model.RollbackTr
 }
 
 func (s *transactionService) Pay(ctx context.Context, tr model.PayTransactionRq) error {
-	code, err := s.doReq(ctx, http.MethodPatch, "/transaction", tr, nil)
+	code, err := s.doReq(ctx, http.MethodPatch, "/transaction", &tr, nil)
 	if err != nil {
 		return fmt.Errorf(transactionServicePath, err)
 	}
@@ -62,6 +62,19 @@ func (s *transactionService) Pay(ctx context.Context, tr model.PayTransactionRq)
 	}
 
 	return nil
+}
+
+func (s *transactionService) MetricBook(ctx context.Context, mrq model.MetricTransactionRq) (metric []model.MetricTransactionRp, err error) {
+	code, err := s.doReq(ctx, http.MethodGet, "/metric", &mrq, &metric)
+	if err != nil {
+		return metric, fmt.Errorf(transactionServicePath, err)
+	}
+
+	if code != http.StatusOK {
+		return metric, fmt.Errorf(transactionServicePath, err)
+	}
+
+	return metric, nil
 }
 
 func (s *transactionService) doReq(ctx context.Context, method, source string, input, dest interface{}) (status int, err error) {
@@ -75,12 +88,16 @@ func (s *transactionService) doReq(ctx context.Context, method, source string, i
 		return 0, err
 	}
 	req = req.WithContext(ctx)
+	req.Header.Set("Content-Type", "application/json")
 
 	resp, err := s.client.Do(req)
 	if err != nil {
 		return 0, err
 	}
 	defer resp.Body.Close()
+
+	fmt.Println(resp.Body)
+	fmt.Println(dest)
 
 	if dest != nil {
 		err = json.NewDecoder(resp.Body).Decode(dest)
