# transport/http/handler/library.go
@@ -113,49 +113,12 @@ func (h *Manager) LibraryReturn(c echo.Context) error {
 // @Failure 401 {object} ErrEnvelope "missing or malformed jwt"
 // @Failure 404 {object} ErrEnvelope "record is not exist"
 // @Failure 500 {object} ErrEnvelope "internal server error"
-// @Router /library/debtor/list [get]
+// @Router /library/debtors [get]
 func (h *Manager) ListBookBorrowDebtor(c echo.Context) error {
 	ctx, cancel := context.WithTimeout(c.Request().Context(), 5*time.Second)
 	defer cancel()
 
 	list, err := h.service.Library.ListDebtors(ctx)
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, ErrEnvelope{err.Error()})
-	}
-
-	return c.JSON(http.StatusFound, list)
-}
-
-// ListLibraryMetric godoc
-// @Summary ListBookBorrowMetric
-// @Description	List library debtor record
-// @Tags library
-// @Accept json
-// @Produce json
-// @Param id path int true "Month"
-// @Success 200 {object} []model.LibraryMetric
-// @Failure 400 {object} ErrEnvelope "bad request"
-// @Failure 401 {object} ErrEnvelope "missing or malformed jwt"
-// @Failure 404 {object} ErrEnvelope "record is not exist"
-// @Failure 500 {object} ErrEnvelope "internal server error"
-// @Router /library/metric/list/{id} [get]
-func (h *Manager) ListBookBorrowMetric(c echo.Context) error {
-	input := struct {
-		Month int `param:"id" validate:"required,min=1,max=12"`
-	}{}
-
-	if err := c.Bind(&input); err != nil {
-		return c.JSON(http.StatusBadRequest, ErrEnvelope{model.ErrInvalidJSON.Error()})
-	}
-
-	if err := c.Validate(input); err != nil {
-		return c.JSON(http.StatusBadRequest, ErrEnvelope{model.ErrInvalidData.Error()})
-	}
-
-	ctx, cancel := context.WithTimeout(c.Request().Context(), 5*time.Second)
-	defer cancel()
-
-	list, err := h.service.Library.ListMetric(ctx, input.Month)
 	if err != nil {
 		return c.JSON(http.StatusInternalServerError, ErrEnvelope{err.Error()})
 	}
